[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/dice.png" type="Texture" id=1]
[ext_resource path="res://assets/bullet.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Computer Speak v0.3.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/themes/GUITheme.tres" type="Theme" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/timer-spritesheet.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ReloadTimer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "ReloadTimer"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("ReloadTimer:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="DynamicFont" id=4]
size = 9
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 182.0

[node name="Dice" type="Sprite" parent="MarginContainer/Control"]
position = Vector2( 284, 16 )
texture = ExtResource( 1 )
hframes = 6

[node name="Bullet" type="Sprite" parent="MarginContainer/Control"]
texture = ExtResource( 2 )
offset = Vector2( 16, 16 )

[node name="AmmoCount" type="Label" parent="MarginContainer/Control"]
anchor_left = 0.081
anchor_top = 0.04
anchor_right = 0.101
anchor_bottom = 0.051
custom_fonts/font = SubResource( 1 )
text = " 0/0 "

[node name="ReloadTimer" type="Sprite" parent="MarginContainer/Control"]
position = Vector2( 70, 15 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
hframes = 8
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="MarginContainer/Control"]
anims/RESET = SubResource( 2 )
anims/ReloadTimer = SubResource( 3 )

[node name="Score" type="Label" parent="MarginContainer/Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 5.0
grow_horizontal = 2
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "score:"
align = 1

[connection signal="animation_finished" from="MarginContainer/Control/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
